# researchpilot

./: .gitignore  README.md  env.example  pyproject.toml  venue_tiers.json
backend/agents/: gaps.py  planner.py  ranker.py  search.py  summariser.py  writer.py
backend/api/: app.py
backend/core/: config.py  database.py  emitter.py  pipeline.py  state.py
backend/evaluation/: evaluator.py
researchpilot-frontend/: package-lock.json  package.json
researchpilot-frontend/researchpilot-frontend/: index.html
researchpilot-frontend/researchpilot-frontend/src/: App.css
researchpilot-frontend/researchpilot-frontend/src/components/: EvaluationPanel.css  GapCard.css  PaperCard.css  QueryInput.css  SessionView.jsx
researchpilot-frontend/researchpilot-frontend/src/lib/: api.js
researchpilot-frontend/src/: App.jsx  index.css
researchpilot-frontend/src/components/: EvaluationPanel.jsx  GapCard.jsx  PaperCard.jsx  PipelineStepper.css  PipelineStepper.jsx  QueryInput.jsx  SessionView.css  Sidebar.css  Sidebar.jsx
researchpilot-frontend/src/hooks/: usePipelineStream.js
tests/: test_core.py
